--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,52 @@
 <div class="d-flex align-items-center justify-content-center h-100 w-100">
     <div id="canvasContainer">
-        <angular-editor-fabric-js #canvas (updateActiveTool)="updateActiveTool($event)"></angular-editor-fabric-js>
+        <angular-editor-fabric-js #canvas></angular-editor-fabric-js>
     </div>
 </div>
 
 <div style="position: absolute; top: 10px; left: 10px;" class="d-flex align-items-start flex-column">
-    <div class="btn-group-vertical mb-2" id="drawingTool">
-        <button id="select" class="btn btn-primary" [ngClass]="{'active': activeTool === 'select'}" title="Select" (click)="drawingTool($event)">
+    <div class="btn-group-vertical mb-2">
+        <button id="select" class="btn btn-primary" [ngClass]="{'active': canvas.activeTool === 'select'}" title="Select" (click)="drawingTool($event)">
             <svg style="pointer-events: none;" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="24" height="24">
                 <path  fill="#fff" stroke="none" d="M423.547,323.115l-320-320c-3.051-3.051-7.637-3.947-11.627-2.304s-6.592,5.547-6.592,9.856V480 c0,4.501,2.837,8.533,7.083,10.048c4.224,1.536,8.981,0.192,11.84-3.285l85.205-104.128l56.853,123.179 c1.792,3.883,5.653,6.187,9.685,6.187c1.408,0,2.837-0.277,4.203-0.875l74.667-32c2.645-1.131,4.736-3.285,5.76-5.973 c1.024-2.688,0.939-5.675-0.277-8.299l-57.024-123.52h132.672c4.309,0,8.213-2.603,9.856-6.592 C427.515,330.752,426.598,326.187,423.547,323.115z"></path>
             </svg>
         </button>
-        <button id="draw" class="btn btn-primary" [ngClass]="{'active': activeTool === 'draw'}" title="Draw" (click)="drawingTool($event)">
+        <button id="draw" class="btn btn-primary" [ngClass]="{'active': canvas.activeTool === 'draw'}" title="Draw" (click)="drawingTool($event)">
             <svg style="pointer-events: none;" viewBox="0 -3 512 512" xml:space="preserve" width="24" height="24">
                 <path fill="#fff" stroke="none" d="M 497.171875 86.429688 C 506.734375 76.867188 512 64.152344 512 50.628906 C 512 37.105469 506.734375 24.390625 497.171875 14.828125 C 487.609375 5.265625 474.894531 0 461.371094 0 C 447.847656 0 435.132812 5.265625 425.570312 14.828125 L 198.296875 242.105469 L 269.894531 313.703125 Z M 497.171875 86.429688 "></path>
                 <path fill="#fff" stroke="none" d="M 65.839844 506.65625 C 92.171875 507.21875 130.371094 496.695312 162.925781 459.074219 C 164.984375 456.691406 166.894531 454.285156 168.664062 451.855469 C 179.460938 435.875 184.695312 418.210938 183.855469 400.152344 C 182.945312 380.5625 174.992188 362.324219 161.460938 348.796875 C 150.28125 337.613281 134.722656 331.457031 117.648438 331.457031 C 95.800781 331.457031 73.429688 341.296875 56.277344 358.449219 C 31.574219 383.152344 31.789062 404.234375 31.976562 422.839844 C 32.15625 440.921875 32.316406 456.539062 11.101562 480.644531 L 0 493.257812 C 0 493.257812 26.828125 505.820312 65.839844 506.65625 Z M 65.839844 506.65625"></path>
                 <path fill="#fff" stroke="none" d="M 209.980469 373.621094 L 248.496094 335.101562 L 176.894531 263.503906 L 137.238281 303.160156 C 154.691406 306.710938 170.464844 315 182.859375 327.394531 C 195.746094 340.285156 205.003906 356.1875 209.980469 373.621094 Z M 209.980469 373.621094 "></path>
             </svg>
         </button>
-        <button id="line" class="btn btn-primary" [ngClass]="{'active': activeTool === 'line'}" title="Line" (click)="drawingTool($event)">
+        <button id="line" class="btn btn-primary" [ngClass]="{'active': canvas.activeTool === 'line'}" title="Line" (click)="drawingTool($event)">
             <svg style="pointer-events: none;" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="24" height="24">
                 <path fill="#fff" stroke="none" d="M349.091,0v124.516L124.516,349.091H0V512h162.909V387.484l224.574-224.574H512V0H349.091z M54.303,457.696v-54.303 h54.303v54.303H54.303z M457.696,108.605h-54.303V54.303h54.303V108.605z"></path>
             </svg>
         </button>
-        <button id="rect" class="btn btn-primary" [ngClass]="{'active': activeTool === 'rect'}" title="Rectangle" (click)="drawingTool($event)">
+        <button id="rect" class="btn btn-primary" [ngClass]="{'active': canvas.activeTool === 'rect'}" title="Rectangle" (click)="drawingTool($event)">
             <svg x="0px" y="0px" viewBox="0 0 512 512" style="pointer-events: none;" xml:space="preserve" width="24" height="24">
                 <path fill="#fff" stroke="none" d="m512 133.286v-98.857h-98.857v34.428h-314.286v-34.428h-98.857v98.857h34.429v245.429h-34.429v98.857h98.857v-34.428h314.286v34.428h98.857v-98.857h-34.429v-245.429zm-68.857-68.857h38.857v38.857h-38.857zm-413.143 0h38.857v38.857h-38.857zm38.857 383.142h-38.857v-38.857h38.857zm413.143 0h-38.857v-38.857h38.857zm-34.429-68.857h-34.428v34.429h-314.286v-34.429h-34.428v-245.428h34.428v-34.429h314.286v34.429h34.428z"/>
             </svg>
         </button>
-        <button id="path" class="btn btn-primary" [ngClass]="{'active': activeTool === 'path'}" title="Path" (click)="drawingTool($event)">
+        <button id="path" class="btn btn-primary" [ngClass]="{'active': canvas.activeTool === 'path'}" title="Path" (click)="drawingTool($event)">
             <svg style="pointer-events: none;" viewBox="28 55 140 140" xml:space="preserve" width="24" height="24">
                 <path fill="#fff" stroke="none" d="m 28.386086,150.01543 v 43.10301 H 71.489092 V 178.7505 H 120.75466 V 164.38283 H 71.355237 L 71.488872,150.0086 H 57.121421 c 0,-49.247 14.367449,-63.614929 63.633239,-63.614929 v -14.36768 c -63.633239,0 -78.000906,28.735609 -78.000906,77.982609 l -14.367888,0.007 z m 14.367669,28.73507 v -14.36767 h 14.367668 v 14.36767 z" id="path840" style="stroke-width: 0.264583;"></path>
                 <path fill="#fff" stroke="none" d="m 120.74975,150.00843 v 43.10301 h 43.10301 V 150.0016 l -43.10301,0.007 z m 14.36767,28.73507 v -14.36767 h 14.36767 v 14.36767 z" id="path840-1" style="stroke-width: 0.264583;"></path>
                 <path fill="#fff" stroke="none" d="m 120.74975,57.658601 v 43.103009 h 43.10301 V 57.651771 l -43.10301,0.007 z m 14.36767,28.73507 v -14.36767 h 14.36767 v 14.36767 z" id="path840-1-0" style="stroke-width: 0.264583;"></path>
             </svg>
         </button>
-        <button id="textbox" class="btn btn-primary" [ngClass]="{'active': activeTool === 'textbox'}" title="Text Box" (click)="drawingTool($event)">
+        <button id="textbox" class="btn btn-primary" [ngClass]="{'active': canvas.activeTool === 'textbox'}" title="Text Box" (click)="drawingTool($event)">
             <svg style="pointer-events: none;" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="24" height="24">
                 <path fill="#fff" stroke="none" d="M497,90c8.291,0,15-6.709,15-15V15c0-8.291-6.709-15-15-15h-60c-8.291,0-15,6.709-15,15v15H90V15c0-8.401-6.599-15-15-15 H15C6.599,0,0,6.599,0,15v60c0,8.399,6.599,15,15,15h15v332H15c-8.291,0-15,6.709-15,15v60c0,8.291,6.709,15,15,15h60 c8.291,0,15-6.709,15-15v-15h332v15c0,8.399,6.599,15,15,15h60c8.401,0,15-6.601,15-15v-60c0-8.401-6.599-15-15-15h-15V90H497z  M452,422h-15c-8.401,0-15,6.599-15,15v15H90v-15c0-8.291-6.709-15-15-15H60V90h15c8.401,0,15-6.601,15-15V60h332v15 c0,8.291,6.709,15,15,15h15V422z"></path>
                 <path fill="#fff" stroke="none" d="M361,105H151c-8.291,0-15,6.709-15,15v60c0,6.064,3.647,11.543,9.258,13.857c5.625,2.329,12.056,1.04,16.348-3.252 L187.211,165H226v176.459l-27.48,42.221c-3.062,4.6-3.354,10.518-0.747,15.396S205.463,407,211,407h90 c5.537,0,10.62-3.047,13.228-7.925c2.608-4.878,2.314-10.796-0.747-15.396L286,341.459V165h38.789l25.605,25.605 c4.307,4.307,10.781,5.596,16.348,3.252c5.61-2.314,9.258-7.793,9.258-13.857v-60C376,111.709,369.291,105,361,105z"></path>
             </svg>
         </button>
+        <div id="upload" class="btn btn-primary btn-upload" title="Upload Image">
+            <svg style="pointer-events: none;" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="24" height="24">
+                <path fill="#fff" stroke="none" d="M412.907,214.08C398.4,140.693,333.653,85.333,256,85.333c-61.653,0-115.093,34.987-141.867,86.08 C50.027,178.347,0,232.64,0,298.667c0,70.72,57.28,128,128,128h277.333C464.213,426.667,512,378.88,512,320 C512,263.68,468.16,218.027,412.907,214.08z M298.667,277.333v85.333h-85.333v-85.333h-64L256,170.667l106.667,106.667H298.667z"></path>
+            </svg>
+            <input type="file" name="file" (change)="readUrl($event);" />
+        </div>
         <button id="zoomFit" class="btn btn-primary" title="Zoom Fit" (click)="zoomFit()">
             <svg style="pointer-events: none;" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve" width="24" height="24">
                 <path fill="#fff" stroke="none" d="m145.96875 423.246094h-36.707031l84.6875-84.375-21.171875-21.253906-84.476563 84.164062v-36.203125h-30v87.667969h87.667969zm0 0"></path>
@@ -51,8 +57,8 @@
             </svg>
         </button>
     </div>
-    <div class="btn-group-vertical">
-        <button title="Export to image" type="button" class="btn btn-primary" (click)="rasterize();">
+    <div class="btn-group-vertical mb-2">
+        <button title="Export to image" type="button" class="btn btn-secondary" (click)="rasterize();">
             <svg width="24" height="24" x="0px" y="0px" viewBox="0 0 550.801 550.801" style="pointer-events: none" xml:space="preserve">
                 <g fill="#fff">
                     <path d="M146.747,276.708c0-13.998-9.711-22.352-26.887-22.352c-6.99,0-11.726,0.675-14.204,1.355v44.927
@@ -76,7 +82,7 @@
                 </g>
             </svg>
         </button>
-        <button title="Export to SVG" type="button" class="btn btn-primary" (click)="rasterizeSVG();">
+        <button title="Export to SVG" type="button" class="btn btn-secondary" (click)="rasterizeSVG();">
             <svg width="24" height="24" x="0px" y="0px" viewBox="0 0 550.801 550.801" style="pointer-events: none" xml:space="preserve">
                 <g fill="#fff">
                     <path d="M488.426,197.019H475.2v-63.816c0-0.398-0.063-0.799-0.116-1.202c-0.021-2.534-0.827-5.023-2.562-6.995L366.325,3.694
@@ -99,18 +105,43 @@
                 </g>
             </svg>
         </button>
-        <button title="Clean Canvas" type="button" class="btn btn-danger" (click)="confirmClear();">
-              <i class="fa fa-ban" aria-hidden="true"></i></button>
+        <button title="Save Image" type="button" class="btn btn-secondary" (click)="saveCanvasToJSON();">
+            <svg width="24" height="24" x="0px" y="0px" viewBox="0 0 512 512" style="pointer-events: none" xml:space="preserve">
+                <g fill="#fff">
+                    <path d="M166,332h180c8.284,0,15-6.716,15-15s-6.716-15-15-15H166c-8.284,0-15,6.716-15,15S157.716,332,166,332z"/>
+                    <path d="M166,392h180c8.284,0,15-6.716,15-15s-6.716-15-15-15H166c-8.284,0-15,6.716-15,15S157.716,392,166,392z"/>
+                    <path d="M507.606,84.394l-80-80C424.793,1.58,420.978,0,417,0H15C6.716,0,0,6.716,0,15v482c0,8.284,6.716,15,15,15
+                        c6.912,0,477.495,0,482,0c8.284,0,15-6.716,15-15V95C512,91.021,510.419,87.206,507.606,84.394z M121,30h210v100H121V30z
+                        M391,482H121V272h270V482z M482,482h-61V257c0-8.284-6.716-15-15-15H106c-8.284,0-15,6.716-15,15v225H30V30h61v115
+                        c0,8.284,6.716,15,15,15h240c8.284,0,15-6.716,15-15V30h49.787L482,101.213V482z"/>
+                    <path d="M166,452h180c8.284,0,15-6.716,15-15s-6.716-15-15-15H166c-8.284,0-15,6.716-15,15S157.716,452,166,452z"/>
+                </g>
+            </svg>
+        </button>
+        <div title="Load Image" type="button" class="btn btn-secondary btn-upload">
+            <svg viewBox="0 -18 512 512" width="24" height="24" x="0px" y="0px" style="pointer-events: none" xml:space="preserve">
+                <g fill="#fff">
+                    <path d="m432 0h-352c-44.113281 0-80 35.886719-80 80v280c0 44.113281 35.886719 80 80 80h273c11.046875 0 20-8.953125 20-20s-8.953125-20-20-20h-73.664062l-45.984376-59.65625 145.722657-185.347656 98.097656 108.421875c5.546875 6.136719 14.300781 8.21875 22.019531 5.246093 7.714844-2.976562 12.808594-10.394531 12.808594-18.664062v-170c0-44.113281-35.886719-80-80-80zm40 198.085938-79.167969-87.503907c-3.953125-4.371093-9.640625-6.785156-15.523437-6.570312-5.886719.207031-11.386719 2.996093-15.03125 7.628906l-154.117188 196.023437-52.320312-67.875c-3.785156-4.910156-9.636719-7.789062-15.839844-7.789062-.003906 0-.007812 0-.011719 0-6.203125.003906-12.058593 2.886719-15.839843 7.804688l-44.015626 57.21875c-6.734374 8.757812-5.097656 21.3125 3.65625 28.046874 8.757813 6.738282 21.3125 5.097657 28.050782-3.65625l28.175781-36.632812 88.816406 115.21875h-148.832031c-22.054688 0-40-17.945312-40-40v-280c0-22.054688 17.945312-40 40-40h352c22.054688 0 40 17.945312 40 40zm0 0"/>
+                    <path d="m140 72c-33.085938 0-60 26.914062-60 60s26.914062 60 60 60 60-26.914062 60-60-26.914062-60-60-60zm0 80c-11.027344 0-20-8.972656-20-20s8.972656-20 20-20 20 8.972656 20 20-8.972656 20-20 20zm0 0"/>
+                    <path d="m468.476562 302.941406c-.058593-.058594-.117187-.121094-.175781-.179687-9.453125-9.519531-22.027343-14.761719-35.410156-14.761719-13.34375 0-25.882813 5.210938-35.324219 14.675781l-38.613281 38.085938c-7.863281 7.753906-7.949219 20.417969-.191406 28.28125 7.753906 7.863281 20.417969 7.953125 28.28125.195312l25.847656-25.492187v112.253906c0 11.046875 8.953125 20 20 20s20-8.953125 20-20v-111.644531l24.738281 25.554687c3.921875 4.054688 9.144532 6.089844 14.371094 6.089844 5.011719 0 10.027344-1.871094 13.910156-5.628906 7.9375-7.683594 8.140625-20.34375.457032-28.28125zm0 0"/>
+                </g>
+            </svg>
+            <input type="file" name="file" (change)="loadCanvasFromJSON($event);" accept=".json" />
+        </div>
     </div>
+    <button title="Clean Canvas" type="button" class="btn btn-danger" (click)="confirmClear();">
+        <svg viewBox="0 0 551.13 551.13" width="24" height="24" x="0px" y="0px" style="pointer-events: none" xml:space="preserve">
+            <path fill="#fff" d="m275.565 0c-151.944 0-275.565 123.621-275.565 275.565s123.621 275.565 275.565 275.565 275.565-123.621 275.565-275.565-123.621-275.565-275.565-275.565zm157.661 93.55-157.661 157.661-157.661-157.661c42.321-36.708 97.37-59.105 157.661-59.105s115.34 22.397 157.661 59.105zm-398.781 182.015c0-60.291 22.397-115.339 59.105-157.661l157.661 157.661-157.661 157.661c-36.708-42.321-59.105-97.37-59.105-157.661zm83.459 182.015 157.661-157.661 157.66 157.661c-42.321 36.708-97.37 59.105-157.661 59.105s-115.339-22.397-157.66-59.105zm339.676-24.354-157.661-157.661 157.661-157.661c36.708 42.321 59.105 97.37 59.105 157.661s-22.398 115.34-59.105 157.661z"/>
+        </svg>
+    </button>
 </div>
 
 <div style="position: absolute; right: 10px; top: 10px; width: 325px;">
     <div class="card mb-3">
-        <div class="card-header">
-            Canvas Size and Options
+        <div class="card-header p-2">
+            <h6 class="card-title m-0">Canvas Settings</h6>
         </div>
         <div class="card-body p-2">
-            <h6>Canvas Size</h6>
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
@@ -125,7 +156,17 @@
                     </div>
                 </div>
             </div>
-            <h6>Options</h6>
+            <div class="form-group">
+                <label>Background Color</label>
+                <input type="color" class="form-control" [(ngModel)]="canvas.props.canvasBackgroundColor" (change)="setCanvasFill($event)">
+            </div>
+        </div>
+    </div>
+    <div class="card mb-3">
+        <div class="card-header p-2">
+            <h6 class="card-title m-0">Object Options</h6>
+        </div>
+        <div class="card-body p-2">
             <div class="btn-group">
                 <button id="flip-h" title="Flip Horizontal" class="btn btn-secondary" (click)="objectOption($event)">
                     <svg width="24" height="24" style="pointer-events: none;" viewBox="0 0 16 20" xml:space="preserve">
@@ -196,21 +237,6 @@
             <img class="images-item" (click)="getImgPolaroid($event)" src="../assets/img/right_arrow.svg">
             <img class="images-item" (click)="getImgPolaroid($event)" src="../assets/img/arrow-left-right.svg">
             <img class="images-item" (click)="getImgPolaroid($event)" src="../assets/img/arrow.svg">
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header">Upload image</div>
-        <div class="card-body text-center">
-            <img id="testImage" *ngIf="canvas.url" class="images-item-upload" [src]="canvas.url" (click)="addImageOnCanvas(canvas.url);">
-            <input type="file" (change)="readUrl($event);" class="form-control">
-            <br/>
-            <br/>
-            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-outline-danger btn-sm" (click)="removeWhite(canvas.url);">
-                      <i class="fa fa-times" aria-hidden="true"></i> Remove</button>
-                </div>
-            </div>
         </div>
     </div>
 </div>
