--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,14 +16,21 @@
 }
 
 .images-item-upload {
-    width: 80%;
+    width: 100%;
     cursor: pointer;
     padding-bottom: 10px;
     -webkit-transition: .5s ease;
     -webkit-transition: .5s ease;
+    border: 1px solid #ccc;
     &:hover {
         opacity: 0.7;
     }
+}
+
+.remove-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
 }
 
 .max-height {
@@ -36,4 +43,17 @@
     width: 250px;
     top: 10px;
     left: 70px;
+}
+
+.btn-upload {
+    position: relative;
+    overflow: hidden;
+    input {
+        position: absolute;
+        opacity: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+    }
 }
